# shinode

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  PRD.md  README.md  RELEASE_PREP.md  ROADMAP.md  SPEC.md  STRATEGY.md
.github/workflows/: release.yml
analysis/: README.md
analysis/bench/: README.md  analyze_chrome_trace.py  analyze_trace_gaps.py  analyze_trace_long_spans.py  compare_bench_reports.py  slice_events_by_block.py
analysis/hetzner/: README.md  bench_artifacts_analysis.ipynb  compaction_mem_correlation.py  trace_analysis_timeseries.py
deadcode/: DEAD_CODE_REPORT.md
docs/: CNAME  README.md  UI_DESIGNS.md  architecture.md  configuration.md  getting-started.md  index.html  style.css
docs/spec/: gemini-ponder-rpc-surface.md  harness_spec.md  main_idea.md  spec_exploration.md
docs/spec/ai-research-transcripts/: Node vs Harness Performance Bottlenecks.json  Reth KB Gaps For Project.json  Rindexer RPC Method Analysis.json  Stateless History Client for Indexing.json
docs/spec/archive/: PRD_v0.1.md
docs/spec/reth_kb/questions/: Q002-network-entrypoints.md  Q003-sync-entrypoints.md  Q009-static-files-nippyjar.md  Q010-storage-migrations-versioning.md  Q016-connection-limits-dial-backoff.md  Q017-peer-persistence.md  Q019-engine-tree-backfill-handoff.md  Q021-rpc-server-wiring.md  Q023-rpc-safety-knobs.md  Q024-eth-request-handler.md  Q025-config-plumbing-network-sync.md  Q028-eth-version-capabilities.md  Q029-fetchclient-receipts-gap.md  Q030-session-request-failures.md  Q033-transactionsmanager-capability-filtering.md  Q035-engine-orchestrator-control-flow.md  Q036-engine-api-forkchoice-newpayload.md  Q037-backfill-sync-lifecycle-cleanup.md  Q039-cl-engine-api-ingress.md  _template.md
docs/spec/reth_repo_context/: CONTEXT_FILES.md  context-network.xml  context-rpc.xml  context-storage.xml  context-transactions.xml  repomix-output.reth-kb.xml
docs/spec/stateless-book-analysis/: gemini-analysis.md  repomix-eth-stateless-book.xml
docs/spec/transcripts/: cursor_stateless_history_client_for_uni.md
docs/spec/worklogs/: PEER_WARMUP_AND_STATS_PLAN.md
docs/spec/worklogs/20260123_hetzner_oom/: README.md
docs/spec/worklogs/20260125_follow_mode_refactor/: FOLLOW_MODE_PLAN.md  REFACTOR_PLAN.md
docs/spec/worklogs/20260126_deadcode_cleanup/: DEAD_CODE_REPORT_claude.md  DEAD_CODE_REPORT_codex.md  (+2 more)
harness/: Cargo.toml  README.md
harness/src/: main.rs
node/: AGENTS.md  Cargo.toml  FILE_ID.DIZ  clippy.toml
node/src/: AGENTS.md  main.rs  metrics.rs  test_utils.rs
node/src/chain/: mod.rs
node/src/cli/: AGENTS.md  mod.rs
node/src/logging/: AGENTS.md  json.rs  mod.rs  report.rs  resources.rs
node/src/p2p/: AGENTS.md  mod.rs
node/src/rpc/: AGENTS.md  mod.rs
node/src/run/: AGENTS.md  cleanup.rs  commands.rs  mod.rs  session.rs  startup.rs  sync_runner.rs  trackers.rs
node/src/storage/: AGENTS.md  mod.rs
node/src/storage/sharded/: AGENTS.md  bitset.rs  hash.rs  mod.rs  nippy_raw.rs  wal.rs
node/src/sync/: AGENTS.md  mod.rs
node/src/sync/historical/: AGENTS.md  db_writer.rs  fetch.rs  fetch_task.rs  follow.rs  mod.rs  process.rs  reorg.rs  scheduler.rs  sink.rs  stats.rs  types.rs
node/src/ui/: AGENTS.md  bars.rs  beep.rs  mod.rs  progress.rs  state.rs  tui.rs
node/tests/: AGENTS.md  test_strategy.rs
rpc-benchmark/: COMMITS.md  PLAN.md  README.md  SESSION_STATE.md  bench.sh
scripts/: draw_bitset.py
spec/: Research_Base’s P2P Network_ Does It Exist and How Does It Work_.docx.md  Research_EIP-4444-Style History Pruning in OP Stack L2 Chains (Optimism & Base).md  Research_Ethereum L1_ “Stateless” History Clients and Existing Efforts.md  gemini-rindexer-rpc-surface.md  repomix-output.ponder.filtered.xml  repomix-output.rindexer.xml  reth_overview.md  thoughts.md
spec/ai-research-transcripts/: Index Without Heavy Nodes.json  Node Bottleneck_ Peer Congestion.json  Ponder Ethereum RPC Method Analysis.json  Reth Architecture_ Network Focus.json  Reth Peer Persistence Explained.json  Reth Sync Pipeline Entry Points.json
spec/archive/: PERFORMANCE_v0.2.md
spec/reth_kb/: INDEX.md  PROMPT_TEMPLATE.md
spec/reth_kb/questions/: Q001-repo-architecture-map.md  Q004-storage-entrypoints.md  Q005-rpc-entrypoints.md  Q006-mdbx-lifecycle.md  Q007-db-abstraction-layer.md  Q008-table-definitions-codecs.md  Q011-pipeline-orchestration.md  Q012-reverse-headers-downloader.md  Q013-bodies-downloader.md  Q014-missing-ranges-holes.md  Q015-peers-manager-reputation.md  Q018-canonical-chain-reorgs.md  Q020-rollback-semantics-reorgs.md  Q022-eth-getlogs.md  Q026-metrics-tracing-network-sync.md  Q027-receipts-request-flow.md  Q031-protocol-enforcement-status-version.md  Q032-receipts69-conversion-fetchclient-requests.md  Q034-live-download-coordination.md  Q038-canonical-in-memory-state-lifecycle.md
spec/reth_repo_context/: context-engine.xml  context-sync.xml  context_recommendations.md  reth-agents.md
spec/transcripts/: cursor_receipt_harness_block_refetching.md
spec/worklogs/: PERFORMANCE_PLAN.md  development-prompt.md
spec/worklogs/20260123_hetzner_oom/: README.md  benchmark_artifact_signals.tsv
spec/worklogs/20260126_deadcode_cleanup/: DEAD_CODE_DECISIONS.md
spec/worklogs/20260126_escalation_queue/: ATOMIC_COMPACTION_PLAN.md  ESCALATION_QUEUE_PLAN.md
spec/worklogs/20260126_ui_refactor/: UI_REFACTORING_PLAN.md
spec/worklogs/20260128_follow_mode_issues/: Gemini_Answer1.md  Gemini_Answer2.md  INVESTIGATION.md  P2P_DISCOVERY_VISIBILITY.md  RESEARCH_v2.md  SYMPTOMS.md
spec/worklogs/20260128_rpc_segment_caching/: 01-v1-v2-comparison.md  03-reth-rpc-optimization.md  04-reth-gemini-research.md  README.md  RESULTS.md  repomix-output.reth-rpc-cache.xml
spec/worklogs/follow-reorg/: SPEC.codex.md  SPEC.gpt5.2.md  SPEC.md  SPEC.opus.md
spec/worklogs/refactor/: HARNESS_PARITY_NOTES.md  HISTORICAL_SYNC_REFACTOR_SPEC.md  answer.codex.md
spec/worklogs/sharding_refactor/: SHARDED_STORAGE_REFACTOR_SPEC.md  SPEC.GPT5.2.md  SPEC.codex.md  SPEC.opus.md  Transcript.txt
(+453 files in other folders)
